[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
serde_json = "1.0.89"
tokio = {version = "1.23.0", features = ["full"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
